# ArkhamInvestigator

./: .easignore  .env  .env.example  .env.production  .gitignore  Cargo.toml  LICENSE  README.md  app.config.js  app.json  app.version.json  biome.json  declarations.d.ts  eas.json  expo-modules.d.ts  lefthook.yml  metro.config.js  package-lock.json  package.json  petrovich.d.ts  react-native-grayscale.d.ts  tsconfig.base.json  tsconfig.json  vite.config.ts
.fttemplates/Component/: [FTName].components.tsx  [FTName].tsx
.fttemplates/RTK Slice Reducer/: .ftsettings.json  [FTName]Reducer.ts  handle[FTName | capitalcase].ts  handle[FTName | pascalcase].ts
.fttemplates/Redux Persist Migration/: [DATE_NOW('yyyy-MM-dd')]T[DATE_NOW('hh-mm-ss')]-[FTName].ts
.fttemplates/Redux Saga + Action/: index.ts
.fttemplates/Slice/: [FTName].ts  index.ts  reducer.ts
.github/: FUNDING.yml
.github/workflows/: deploy-pages.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
app/: +native-intent.tsx  _layout.tsx  about.tsx  board.tsx  index.tsx  investigator-details.tsx  new-game.tsx  news.tsx  settings.tsx  skill-check.tsx  tsconfig.json
app/(modal)/: _layout.tsx  select-investigator-details.tsx
app/(modal)/board/: overview.tsx  skill-test-reference.tsx
app/(modal)/chaos-bag/: fill.tsx
app/(tabs)/: index.tsx
app/board/: _layout.tsx  help.tsx  index.tsx  skill-check.tsx
app/board/modal/: _layout.tsx  replace-investigator.tsx
app/chaos-bag/: _layout.tsx  history.tsx  index.tsx  preview.tsx  reference.tsx
app/chaos-bag/reference/: _layout.tsx  index.tsx
app/diagnostics/: chaos-odds.tsx
app/modal/: _layout.tsx
app/modal/board/: round-reference.tsx
app/modal/chaos-bag/: preview.tsx
app/multiplayer/: index.tsx
app/select-investigators/: _layout.tsx
app/static/: about.tsx  support.tsx
assets/fonts/: index.ts
assets/fonts/common/: index.ts
assets/fonts/ko/: index.ts
assets/fonts/vi/: index.ts
assets/fonts/zh/: index.ts
assets/i18n/core/: en.json  fr.json  index.ts  ko.json  ru.json  zh-cn.json  zh.json
assets/i18n/loading/: en.json  index.ts  ko.json  ru.json
assets/i18n/name/: en.json  index.ts  ru.json
assets/images/: index.ts
assets/images/game/: index.ts
assets/images/theme/: index.ios.ts  index.ts
assets/images/ui/: common.ts  index.ts
assets/sounds/: index.ts
assets/sounds/wav/: index.ts
cli/: increment-version.ts  rename-build.ts  submit-ios.sh  submit.sh  update-icon-font.ts
docs/changelog/v2/: v2.en.md  v2.ru.md
docs/features/investigators/: investigators.en.md  investigators.ru.md
docs/privacy-policy/: en.md
docs/translation/: README.md  declensions.md  plurals.md  special.md  syntax.md
docs/updates/v2/: v2.en.md  v2.ru.md
ios/: Podfile
ios/ArkhamInvestigator/: Info.plist
ios/ArkhamInvestigator.xcodeproj/: project.pbxproj
ios/ArkhamInvestigator.xcworkspace/: contents.xcworkspacedata
ios/Investigator/: Grayscale.h  Grayscale.m  Info.plist  Investigator-Bridging-Header.h
ios/Investigator.xcodeproj/: project.pbxproj
ios/Investigator.xcworkspace/: contents.xcworkspacedata
modules/: build.sh
modules/chaos-odds/: .gitignore  README.md  build.sh  expo-module.config.json  index.ts  jest.config.js  jest.setup.js  package.json
modules/chaos-odds/android/: CMakeLists.txt  build.gradle
modules/chaos-odds/android/src/main/cpp/: ChaosOddsJNI.cpp
modules/chaos-odds/android/src/main/java/expo/modules/chaosodds/: ChaosOddsJSIModule.kt  ChaosOddsJSIModulePackage.kt  ChaosOddsLifecycleModule.kt  ChaosOddsModule.kt  ChaosOddsView.kt
modules/chaos-odds/cli/: _build.android.dev.sh  _build.android.sh  _build.ios.dev.sh  _build.ios.sh  build.sh  check_symbols.sh  install.sh
modules/chaos-odds/cpp/: ChaosOddsJSI.cpp  (+1 more)
modules/chaos-odds/rust/: .rustc_info.json  Cargo.toml  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md
modules/chaos-odds/rust/.cargo/: config.toml
modules/chaos-odds/rust/chaos_odds/: Cargo.toml
modules/chaos-odds/rust/src/: chaos_bag.rs  chaos_odds_calculate.rs  chaos_odds_calculate_async.rs  chaos_odds_calculate_item.rs  chaos_odds_find_tokens.rs  chaos_odds_version.rs  config.rs  get_chaos_bag_modifiers.rs  lib.rs  memory.rs  model.rs  success_contribution.rs  types.rs
modules/chaos-odds/rust/src/impl/: chaos_odds_token.rs  mod.rs
modules/chaos-odds/rust/src/modifiers/: get_chaos_bag_item_modifiers.rs  get_chaos_bag_modifiers.rs  get_chaos_bag_modifiers_combinatorial.rs  get_chaos_bag_modifiers_debug.rs  mod.rs
modules/chaos-odds/rust/src/odds/: calculate_odds.rs  calculate_odds_item.rs  get_auto_fail_odds.rs  mod.rs
modules/chaos-odds/rust/src/token_odds/: get_token_odds.rs  mod.rs
modules/chaos-odds/rust/src/util/: cache.rs  cancel.rs  chaos_bag.rs  groups.rs  math.rs  memory.rs  mod.rs  parse.rs
modules/chaos-odds/rust/tests/: calculate_odds_item_test.rs  calculate_odds_test.rs  get_auto_fail_odds_test.rs  get_chaos_bag_item_modifiers_test.rs  get_chaos_bag_modifiers_test.rs  get_token_odds_test.rs  zero_difficulty_autofail_test.rs
modules/grayscale/: .gitignore  README.md  expo-module.config.json  index.ts  package.json
patches/: react-native-tcp-socket+6.4.1.patch
scripts/: link-expo-modules.js  watch-ios-logs.sh
slices/: sagas.ts
slices/app/: index.ts  tsconfig.json
slices/entities/: tsconfig.json
slices/features/: index.ts  sagas.ts  tsconfig.json
slices/modules/: reducer.ts  sagas.ts  tsconfig.json
slices/pages/: index.ts  sagas.ts  tsconfig.json
slices/shared/: tsconfig.json
slices/widgets/: index.ts  tsconfig.json
src/: index.css  index.scss  main.tsx
src/api/: arkhamDivider.ts
src/app/: App.global.scss  App.tsx  fonts.scss
src/components/: index.ts
src/config/: app.ts  i18n.ts
src/data/: supportedInvestigators.json
src/fonts/: fonts.scss
src/hooks/: useAppNavigation.ts  useBoardValue.ts  useBoundingRect.ts  useResize.ts
src/scss/: mixins.scss
src/store/: index.ts
src/types/: api.ts  board.ts  common.ts  ui.ts
src/util/: i18n.ts
www/: contact.html
(+7510 files in other folders)
