[package]
name = "chaos_odds"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
smallvec = "1.11"
rustc-hash = "1.1"
dashmap = "5.5"

[lib]
crate-type = [
    "rlib",      # for tests / normal Rust linking
    "staticlib", # for iOS
    "cdylib"    # for Android
]