[package]
name = "chaos_odds"
version = "0.1.0"
edition = "2021"

[features]
default = []
mobile = [] # Feature flag for mobile builds - enables optimizations and limits threads to big cores
no-parallel = [] # Feature flag to disable parallelism for older devices
simd = [] # Feature flag for SIMD optimizations (requires nightly Rust with std::simd)

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
smallvec = "1.11"
rustc-hash = "1.1"
dashmap = "5.5"
rayon = "1.8"

[lib]
crate-type = [
    "rlib",      # for tests / normal Rust linking
    "staticlib" # for iOS and Android (CMake links .a into .so)
]
# NOTE: Do NOT use "cdylib" for Android
# CMake builds the final .so file and links Rust .a into it
# Using cdylib would create a separate .so that conflicts with CMake's .so