[package]
name = "chaos_odds"
version = "0.1.0"
edition = "2021"

[features]
default = []
mobile = [] # Feature flag for mobile builds - enables optimizations and limits threads to big cores
no-parallel = [] # Feature flag to disable parallelism for older devices
simd = [] # Feature flag for SIMD optimizations (requires nightly Rust with std::simd)

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
smallvec = "1.11"
rustc-hash = "1.1"
dashmap = "5.5"
# Removed rayon = "1.8" - not used (no par_iter or parallel operations)
# Removed num_cpus = "1.16" - not needed without Rayon

[lib]
crate-type = [
    "rlib",      # for tests / normal Rust linking
    "staticlib" # for iOS and Android (CMake links .a into .so)
]
# NOTE: Do NOT use "cdylib" for Android
# CMake builds the final .so file and links Rust .a into it
# Using cdylib would create a separate .so that conflicts with CMake's .so
# 
# NOTE: Release profile settings are defined in the workspace root Cargo.toml
# This ensures consistent optimization settings across all workspace members
# IMPORTANT: LTO is disabled in workspace root to prevent dead code elimination of FFI symbols